# espn_fantasy_matchup_stats

./: .isort.cfg  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml
espn_fantasy_matchup_stats/: auth.py  my_team.py  player_stats.py
espn_fantasy_matchup_stats/fantasy/: __init__.py  auth.py  league_auth.py  my_team.py
espn_fantasy_matchup_stats/scrapers/: espn_scraper.py
fantasy_stats/: Makefile  README.md  auth.py  player_stats.py  pyproject.toml
fantasy_stats/fantasy_stats/: player_stats.py
src/: auth.py  handler.py
