[tool.poetry]
name = "espn_fantasy_matchup_stats"
version = "0.7.0"
description = "Fantasy Matchup Stats Helper"
authors = ["RobBlumberg <robertblumberg97@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "1.0.3"
espn-api = "0.19.0"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
ipykernel = "^6.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
